--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -1,15 +1,13 @@
-<FrameLayout
-    style="@style/activity"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.zype.android.ui.launch.LaunchActivity"
-    android:background="@color/launch_background"
-    >
+    style="@style/activity"
+    android:background="@drawable/album_art_lrgbkgnd"
+    tools:context="com.zype.android.ui.launch.LaunchActivity">
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@drawable/splash_logo"
-        />
+        android:src="@drawable/splash_logo" />
 
 </FrameLayout>
